--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    background-color: #FAFAFA;
 
 }
 
@@ -10,19 +11,63 @@ body {
     align-items: center;
     justify-content: center;
 
-
 }
 
 .main__form {
     width: 512px;
+
 }
 
 .main__form>h1 {
     font-weight: 700;
     line-height: 81px;
     font-size: 40px;
+    line-height: 58px;
+    padding-bottom: 40px;
 }
 
 h1>span {
     color: #1ED297;
+}
+
+p {
+    font-size: 21px;
+    color: #4E5A51;
+    line-height: 160%;
+    padding-bottom: 40px;
+}
+
+p>span {
+    font-weight: bold;
+}
+
+.main__form_btn {
+    width: 472px;
+    background-color: #ffff;
+    display: flex;
+    justify-content: space-between;
+    filter: drop-shadow(-5px 5px 45px rgba(2, 18, 6, 0.15));
+    border-radius: 6px;
+    margin-bottom: 36px;
+
+
+}
+
+input {
+    padding-left: 24px;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.btn {
+    background-color: #F44545;
+    padding: 14px 37px;
+    border-radius: 6px;
+    margin: 4px;
+    color: #ffff;
+    font-size: 21px;
+}
+
+.google {
+    padding-right: 30px;
 }
