--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ p>span {
     filter: drop-shadow(-5px 5px 45px rgba(2, 18, 6, 0.15));
     border-radius: 6px;
     margin-bottom: 36px;
+    position: relative;
 
 
 }
