--- a/style.css
+++ b/style.css
@@ -50,10 +50,11 @@ p>span {
     width: 472px;
     background-color: #ffff;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     filter: drop-shadow(-5px 5px 45px rgba(2, 18, 6, 0.15));
     border-radius: 6px;
     margin-bottom: 36px;
+    position: relative;
 
 
 
@@ -63,7 +64,8 @@ input {
     font-weight: 400;
     font-size: 14px;
     padding: 21px;
-    position: relative;
+    border-radius: 6px;
+
 }
 
 .btn {
